# dingtalk-ai-robot

./: .env.example  .gitignore  CHANGELOG.md  README-DEV.md  README.md  README_conversation_records.md  pyproject.toml  requirements.txt  send_robot_group_message.py  simple_test.py  test_create_report_api.py
.chroma_test_db/: chroma.sqlite3
.comate/: mcp.json
app/: __init__.py  db_utils.py  main.py  main_backup.py  main_simple_backup.py
app/api/: router.py
app/api/v1/: __init__.py  conversation.py  demo.py  dingtalk.py  health.py  jira.py  knowledge.py  logs.py  ssh.py  weekly_report.py
app/core/: __init__.py  config.py  container.py  dingtalk_client.py  exceptions.py  logger.py  middleware.py  scheduler.py
app/services/: __init__.py  conversation_log_service.py  weekly_report_service.py
app/services/ai/: __init__.py  handler.py  jira-batch-agent.py  jira_batch_agent.py  jira_bulk_creator.py  openai_client.py  weekly_report_agent.py
app/services/ai/agent/: __init__.py  jira_batch_agent.py  sql_db_agent.py
app/services/ai/client/: openai_client.py
app/services/ai/tools/: __init__.py  jira.py  jira_bulk_creator.py  knowledge_base.py  sql.py  ssh.py  weather.py
app/services/dingtalk/: __init__.py  card.py  report_service.py
app/services/jira/: tasks.py
app/services/knowledge/: __init__.py  parser.py  reranker.py  retriever.py
app/services/ssh/: __init__.py  client.py
app/utils/: time_utils.py
docs/: CREATE_REPORT_REFACTOR_SUMMARY.md  GEMINI_INTEGRATION.md  README.md  ai-agent-method-fix.md  autogen-team-guide.md  conversation_management.md  conversation_records.md  date-format-fix.md  dependency-injection-guide.md  dependency-injection-implementation.md  final-solution-summary.md  generate-summary-enhancement.md  logging-system-flow.md  ssh-intelligent-command-team.md  ssh-tool-debug-report.md  vector-memory-fix.md  weekly-report-service-fix.md  weekly_report_flow.md  windows-hotreload-solution.md
examples/: conversation_usage_example.py
logs/: .gitignore
scripts/: cleanup_conversation_logs.py  init_logs.py  test_conversation_records.py
tests/: __init__.py  send_robot_group_message.py  send_robot_private_message.py  setup_test_data.py  test_conversation_cleanup.py  test_conversation_save_fix.py  test_dependency_injection.py  test_dingtalk_message_fix.py  test_gemini_integration.py  test_ssh_command_team.py  test_ssh_debug.py  test_ssh_tool.py  test_weekly_report.py  test_weekly_report_simple.py
tests/report/: simple_test.py  test_api_request.py  test_core_logic.py
