[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dingtalk-ai-robot"
version = "0.1.0"
description = "钉钉智能机器人，支持AI问答、知识库检索、JIRA管理和服务器维护"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "alibabacloud_dingtalk>=2.2.13",
    "dingtalk_stream>=0.24.0",
    "fastapi>=0.115.9",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.0.0",
    "pydantic_settings>=2.7.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.5",
    "autogen-agentchat>=0.5.7",
    "autogen-ext[openai]>=0.5.7",
    "python-jose>=3.5.0",
    "chromadb>=1.0.11",
    "paramiko>=3.5.1",
    "loguru>=0.7.3",
    "schedule>=1.2.2",
    "jira>=3.5.2",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
]

[project.urls]
Homepage = "https://github.com/DellDi/dingtalk-ai-robot"

[tool.hatch.build]
packages = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "SIM", "RUF"]
